--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,1 +1,18 @@
-<p>login-page works!</p>
+<section id="loginPage">
+  <div id="login">
+    <form>
+      <h2 class="text-center mb-4">EasyHome</h2>
+      <div>
+        <label for="email">E-mail:</label>
+        <br />
+        <input type="email" name="email" />
+      </div>
+      <div>
+        <label for="email">Password:</label>
+        <br />
+        <input type="password" name="password" />
+      </div>
+      <button type="submit" class="buttonEasyHome py-2 px-3 mt-2">Login</button>
+    </form>
+  </div>
+</section>
