--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,4 @@
-<p>home-page works!</p>
+<p>
+  home-page worksdc nmds cnmd svmhdcishdiwhdihidsh
+  dsjdijdiwshdcjshnjdhjhndishcishnodchasodhsaohisa!
+</p>
