--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,5 +1,5 @@
 #sidebar {
-  background-color: var(--light-blue);
+  background-color: var(--blue-EasyHome);
   width: 15%;
   height: 100vh;
   position: fixed;
