--- a/src/app/components/form-add-user/form-add-user.component.html
+++ b/src/app/components/form-add-user/form-add-user.component.html
@@ -60,7 +60,8 @@
       <div>casa 3...</div>
     </div>
   </div>
-
+  <hr />
+  <h4>Dati carta di credito</h4>
   <div>
     <label for="creditCard">Carta di credito:</label>
     <br />
@@ -86,5 +87,5 @@
     <br />
     <input type="text" id="holder" name="holder" formControlName="holder" />
   </div>
-  <button type="submit">Salva</button>
+  <button type="submit" class="btn btn-info">Salva</button>
 </form>
