--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -12,7 +12,11 @@
     <p>Mario Rossi</p>
   </div>
   <div id="menu" class="ps-5 pt-3">
-    <button routerLink="/backoffice/">Visualizza Case</button>
-    <button routerLink="/backoffice/formaAddUser">Crea nuovo Utente</button>
+    <button routerLink="/backoffice/" class="btn btn-primary mb-2">
+      Visualizza Case
+    </button>
+    <button routerLink="/backoffice/formaAddUser" class="btn btn-primary">
+      Crea nuovo Utente
+    </button>
   </div>
 </section>
