--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,18 +1,22 @@
 <section id="loginPage">
-  <div id="login">
-    <form [formGroup]="dataLoginForm" (ngSubmit)="onSubmit()">
-      <h2 class="text-center mb-4">EasyHome</h2>
-      <div>
-        <label for="email">E-mail:</label>
-        <br />
-        <input type="email" name="email" formControlName="email" />
-      </div>
-      <div>
-        <label for="email">Password:</label>
-        <br />
-        <input type="password" name="password" formControlName="password" />
-      </div>
-      <button type="submit" class="buttonEasyHome py-2 px-3 mt-2">Login</button>
-    </form>
+  <div id="veil">
+    <div id="login">
+      <form [formGroup]="dataLoginForm" (ngSubmit)="onSubmit()">
+        <h2 class="text-center mb-4">EasyHome</h2>
+        <div>
+          <label for="email">E-mail:</label>
+          <br />
+          <input type="email" name="email" formControlName="email" />
+        </div>
+        <div>
+          <label for="email">Password:</label>
+          <br />
+          <input type="password" name="password" formControlName="password" />
+        </div>
+        <button type="submit" class="btn btn-light py-2 px-3 mt-2">
+          Login
+        </button>
+      </form>
+    </div>
   </div>
 </section>
