show all houses improved, fix css show-houses

--- a/src/app/components/form-add-user/form-add-user.component.html
+++ b/src/app/components/form-add-user/form-add-user.component.html
@@ -1,4 +1,4 @@
-<h2>Aggiungi un nuovo Utente:</h2>
+<h2 class="mt-5 mb-4">Aggiungi un nuovo Utente:</h2>
 <form [formGroup]="dataFormUser" (ngSubmit)="onSubmitSendData()">
   <div class="d-flex justify-content-around flex-wrap">
     <div>
