--- a/src/app/components/header-backoffice/header-backoffice.component.html
+++ b/src/app/components/header-backoffice/header-backoffice.component.html
@@ -3,4 +3,8 @@
     src="https://www.infobuildenergia.it/wp-content/uploads/2022/06/condizionatori-in-condominio-regole.jpg"
     alt="img.header"
   />
+  <div class="title-header">
+    <h1>EasyHome</h1>
+    <h4>Backoffice</h4>
+  </div>
 </header>
