--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,1 @@
-<p>
-  home-page worksdc nmds cnmd svmhdcishdiwhdihidsh
-  dsjdijdiwshdcjshnjdhjhndishcishnodchasodhsaohisa!
-</p>
+<app-sidebar-homepage />
