--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,7 @@
 <section id="sidebar">
-  <div id="profile" class="ps-5 pt-3">
-    <h4>Backoffice</h4>
+  <div id="profile" class="ps-5 py-3">
+    <p>Amministratore:</p>
+    <h4>Mario Rossi</h4>
     <div id="imgProfile">
       <img
         class="w-100"
@@ -8,15 +9,15 @@
         alt="img_profile"
       />
     </div>
-
-    <p>Mario Rossi</p>
   </div>
-  <div id="menu" class="ps-5 pt-3">
+  <div id="menu" class="px-3 pt-3">
     <button routerLink="/backoffice/" class="btn btn-primary mb-2">
       Visualizza Case
     </button>
-    <button routerLink="/backoffice/formaAddUser" class="btn btn-primary">
+    <button routerLink="/backoffice/formaAddUser" class="btn btn-primary mb-2">
       Crea nuovo Utente
     </button>
+    <button class="btn btn-primary mb-2">Bacheca</button>
+    <button class="btn btn-primary mb-2">Crea notifica bolletta</button>
   </div>
 </section>
