--- a/src/app/pages/backoffice-page/backoffice-page.component.html
+++ b/src/app/pages/backoffice-page/backoffice-page.component.html
@@ -1,5 +1,6 @@
 <app-sidebar />
-<main id="content">
+<main id="content" class="pb-5">
   <app-header-backoffice></app-header-backoffice>
   <router-outlet></router-outlet>
 </main>
+<app-footer />
