enviroment variables created

--- a/src/app/components/sidebar-homepage/sidebar-homepage.component.html
+++ b/src/app/components/sidebar-homepage/sidebar-homepage.component.html
@@ -11,9 +11,12 @@
     <p>Mario Rossi</p>
   </div>
   <div id="menu" class="ps-5 pt-3">
-    <button class="btn btn-primary mb-2">Bacheca</button>
-    <button class="btn btn-primary mb-2">Le mie case</button>
-    <button class="btn btn-primary mb-2">Messaggi</button>
+    <button routerLink="/homepage/" class="btn btn-primary mb-2">
+      Bacheca
+    </button>
+    <button routerLink="/homepage/userHouse" class="btn btn-primary mb-2">
+      Le mie case
+    </button>
     <button class="btn btn-primary mb-2">Impostazioni</button>
   </div>
 </section>
