--- a/src/app/components/show-houses/show-houses.component.html
+++ b/src/app/components/show-houses/show-houses.component.html
@@ -48,7 +48,8 @@
       <strong>Interno: </strong>{{ house.interno }}
     </li>
     <li class="list-group-item">
-      <strong>Proprietario: </strong> {{ house.UserEntity.name }}
+      <strong>Proprietario:</strong>
+      <span *ngIf="house.UserEntity?.name">{{ house.UserEntity.name }}</span>
     </li>
   </ul>
   <div class="card-body">
