--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <app-sidebar-homepage />
 <main id="content" class="pb-5">
-  <app-header-backoffice></app-header-backoffice>
+  <app-header-backoffice [title]="title"></app-header-backoffice>
   <router-outlet></router-outlet>
 </main>
 <app-footer />
