--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -41,9 +41,11 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            EasyHome <img src="../../assets/img/logo.png" alt="alt_logo" />
-          </h6>
+          <h6 class="text-uppercase fw-bold mb-4">EasyHome</h6>
+          <div>
+            <img src="/assets/logo2.png" alt="alt_logo" />
+          </div>
+          <div class="img"></div>
           <p>
             L'App Condominio Smart è la soluzione ideale per gestire il tuo
             condominio in modo semplice, veloce e intuitivo. Dalla gestione
