fix name header, add icons to footer

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -3,3 +3,10 @@ footer {
   background-color: var(--blue-EasyHome) !important;
   color: var(--white-EasyHome) !important;
 }
+#logo {
+  width: 50px;
+}
+
+svg {
+  padding-top: 2px;
+}
