--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,6 +4,7 @@
     alt="img.header"
   />
   <div class="title-header">
+    <img id="logo" class="mt-1" src="/assets/logo2.png" alt="alt_logo" />
     <h1>EasyHome</h1>
     <h4>{{ title }}</h4>
   </div>
