--- a/src/app/components/show-houses/show-houses.component.css
+++ b/src/app/components/show-houses/show-houses.component.css
@@ -10,8 +10,14 @@ h3 {
   margin-left: 20%;
   box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.54);
   border: 5px var(--white-EasyHome) solid;
+  cursor: pointer;
 }
 .card img {
   width: 100%;
   height: 100%;
+}
+
+.card:hover {
+  border: 5px var(--blue-EasyHome) solid;
+  background-color: var(--blue-EasyHome);
 }
