--- a/src/app/pages/backoffice-page/backoffice-page.component.html
+++ b/src/app/pages/backoffice-page/backoffice-page.component.html
@@ -1,6 +1,6 @@
 <app-sidebar />
 <main id="content" class="pb-5">
-  <app-header-backoffice [title]="title"></app-header-backoffice>
+  <app-header [title]="title"></app-header>
   <router-outlet></router-outlet>
 </main>
 <app-footer />
