--- a/src/app/components/form-add-user/form-add-user.component.html
+++ b/src/app/components/form-add-user/form-add-user.component.html
@@ -7,6 +7,16 @@
       <input type="text" id="name" name="name" formControlName="name" />
     </div>
     <div>
+      <label for="surname">Cognome:</label>
+      <br />
+      <input
+        type="text"
+        id="surname"
+        name="surname"
+        formControlName="surname"
+      />
+    </div>
+    <div>
       <label for="email">Email:</label>
       <br />
       <input type="email" id="email" name="email" formControlName="email" />
