--- a/src/app/components/show-houses/show-houses.component.html
+++ b/src/app/components/show-houses/show-houses.component.html
@@ -54,7 +54,9 @@
       </li>
       <li class="list-group-item">
         <strong>Proprietario: </strong>
-        <span *ngIf="house.user">{{ house.user.name }}</span>
+        <span *ngIf="house.user"
+          >{{ house.user.name }} {{ house.user.surname }}</span
+        >
         <span *ngIf="!house.user">nessuno</span>
       </li>
     </ul>
