homepage logic improved, sessionService created

--- a/src/app/components/form-add-user/form-add-user.component.html
+++ b/src/app/components/form-add-user/form-add-user.component.html
@@ -2,7 +2,7 @@
 <form [formGroup]="dataFormUser" (ngSubmit)="onSubmitSendData()">
   <div class="d-flex justify-content-around flex-wrap">
     <div>
-      <label for="name">Nome e Cognome:</label>
+      <label for="name">Nome:</label>
       <br />
       <input type="text" id="name" name="name" formControlName="name" />
     </div>
