--- a/src/app/components/show-houses/show-houses.component.css
+++ b/src/app/components/show-houses/show-houses.component.css
@@ -11,10 +11,11 @@ h3 {
   box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.54);
   border: 5px var(--white-EasyHome) solid;
   cursor: pointer;
+  overflow: hidden;
 }
 .card img {
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
 }
 
 .card:hover {
