--- a/src/app/components/sidebar-homepage/sidebar-homepage.component.css
+++ b/src/app/components/sidebar-homepage/sidebar-homepage.component.css
@@ -10,6 +10,7 @@
 #imgProfile {
   width: 100px;
   height: 100px;
-  border-radius: 50%;
+  border-radius: 100%;
   overflow: hidden;
+  border: solid 4px var(--blue-EasyHome);
 }
