--- a/src/app/components/bacheca/bacheca.component.html
+++ b/src/app/components/bacheca/bacheca.component.html
@@ -1,15 +1,17 @@
 <h2 class="mt-5">La Mia Bacheca</h2>
 <div id="bacheca" class="mt-5">
-  <table>
-    <tr>
-      <th>Messaggio</th>
-      <th>Data</th>
-    </tr>
-    <tr>
-      <td>
-        A causa di un malfunzionamento l'ascensore non è al momento disponibile
-      </td>
-      <td>24/06/2022</td>
-    </tr>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Messaggio</th>
+        <th scope="col">Data</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let notification of notifications">
+        <td>{{ notification.text }}</td>
+        <td>{{ notification.date }}</td>
+      </tr>
+    </tbody>
   </table>
 </div>
