--- a/src/app/components/sidebar-homepage/sidebar-homepage.component.html
+++ b/src/app/components/sidebar-homepage/sidebar-homepage.component.html
@@ -12,7 +12,7 @@
       <strong>Profilo: </strong>{{ user?.name }} {{ user?.surname }}
     </p>
   </div>
-  <div id="menu" class="ps-5 pt-3">
+  <div id="menu" class="px-3 pt-3">
     <button routerLink="/homepage/" class="btn btn-primary mb-2">
       Bacheca
     </button>
