--- a/src/app/components/card-house-user/card-house-user.component.css
+++ b/src/app/components/card-house-user/card-house-user.component.css
@@ -6,9 +6,14 @@
   cursor: pointer;
   border: 5px var(--white-EasyHome) solid;
 }
+.card:hover {
+  border: 5px var(--blue-EasyHome) solid;
+  background-color: var(--blue-EasyHome);
+  color: aliceblue;
+}
 .card img {
   width: 300px;
-  height: 300px;
+  height: 200px;
 }
 .info-card p {
   margin-left: 10px;
