--- a/src/app/components/bacheca/bacheca.component.html
+++ b/src/app/components/bacheca/bacheca.component.html
@@ -1,4 +1,4 @@
-<h2 class="mt-5">La Mia Bacheca</h2>
+<h2 class="mt-5">La Mia Bacheca:</h2>
 <div id="bacheca" class="mt-5">
   <table class="table">
     <thead>
