--- a/src/app/components/sidebar-homepage/sidebar-homepage.component.css
+++ b/src/app/components/sidebar-homepage/sidebar-homepage.component.css
@@ -17,3 +17,43 @@
 button {
   width: 100%;
 }
+
+/*media query mobile version*/
+@media only screen and (max-width: 767px) {
+  #sidebar {
+    width: 100vw;
+    height: 20%;
+    z-index: 160;
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  #profile {
+    width: 100%;
+    height: 35%;
+    display: flex;
+    flex-direction: row-reverse;
+    position: absolute;
+  }
+  #imgProfile {
+    width: 65px;
+    height: 65px;
+  }
+  #menu {
+    display: flex;
+    justify-content: space-around;
+    align-items: end;
+  }
+  button {
+    width: auto;
+    height: 30%;
+    padding: 0px;
+    background-color: var(--blue-EasyHome);
+    border: none;
+    margin-left: 15px;
+    padding: 5px;
+  }
+}
+
+/*Media query per Ipad*/
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+}
