bacheca Admin created

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -17,7 +17,9 @@
     <button routerLink="/backoffice/formaAddUser" class="btn btn-primary mb-2">
       Crea nuovo Utente
     </button>
-    <button class="btn btn-primary mb-2">Bacheca</button>
+    <button routerLink="/backoffice/bachecaAdmin" class="btn btn-primary mb-2">
+      Bacheca
+    </button>
     <button class="btn btn-primary mb-2">Crea notifica bolletta</button>
   </div>
 </section>
