--- a/src/app/components/bacheca-admin/bacheca-admin.component.html
+++ b/src/app/components/bacheca-admin/bacheca-admin.component.html
@@ -1,2 +1,2 @@
-<h2 class="mt-5">La Mia Bacheca:</h2>
+<h2 class="mt-5">Bacheca Generale:</h2>
 <app-table-notification [notficationsList]="notifications" />
