--- a/src/app/components/sidebar-homepage/sidebar-homepage.component.html
+++ b/src/app/components/sidebar-homepage/sidebar-homepage.component.html
@@ -20,5 +20,16 @@
       Le mie case
     </button>
     <button class="btn btn-primary mb-2">Impostazioni</button>
+    <p>Bottoni Amministratore</p>
+    <button routerLink="/backoffice/" class="btn btn-primary mb-2">
+      Visualizza Case
+    </button>
+    <button routerLink="/backoffice/formaAddUser" class="btn btn-primary mb-2">
+      Crea nuovo Utente
+    </button>
+    <button routerLink="/backoffice/bachecaAdmin" class="btn btn-primary mb-2">
+      Bacheca
+    </button>
+    <button class="btn btn-primary mb-2">Crea notifica bolletta</button>
   </div>
 </section>
