--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -10,16 +10,5 @@
       />
     </div>
   </div>
-  <div id="menu" class="px-3 pt-3">
-    <button routerLink="/backoffice/" class="btn btn-primary mb-2">
-      Visualizza Case
-    </button>
-    <button routerLink="/backoffice/formaAddUser" class="btn btn-primary mb-2">
-      Crea nuovo Utente
-    </button>
-    <button routerLink="/backoffice/bachecaAdmin" class="btn btn-primary mb-2">
-      Bacheca
-    </button>
-    <button class="btn btn-primary mb-2">Crea notifica bolletta</button>
-  </div>
+  <div id="menu" class="px-3 pt-3"></div>
 </section>
