--- a/src/app/pages/backoffice-page/backoffice-page.component.html
+++ b/src/app/pages/backoffice-page/backoffice-page.component.html
@@ -1,4 +1,4 @@
-<app-sidebar />
+<app-sidebar-homepage />
 <main id="content" class="pb-5">
   <app-header [title]="title"></app-header>
   <router-outlet></router-outlet>
