--- a/src/app/components/show-houses/show-houses.component.html
+++ b/src/app/components/show-houses/show-houses.component.html
@@ -40,27 +40,6 @@
 <!--fine SearchBar-->
 <div class="d-flex">
   @for (house of houses; track house) {
-  <div class="card mt-3" style="width: 18rem">
-    <img class="card-img-top" src="{{ house.houseImg }}" alt="img_house" />
-    <ul class="list-group">
-      <li class="list-group-item">
-        <strong>Scala: </strong> {{ house.scala }}
-      </li>
-      <li class="list-group-item">
-        <strong>Piano: </strong> {{ house.piano }}
-      </li>
-      <li class="list-group-item">
-        <strong>Interno: </strong>{{ house.interno }}
-      </li>
-      <li class="list-group-item">
-        <strong>Proprietario: </strong>
-        <span *ngIf="house.user"
-          >{{ house.user.name }} {{ house.user.surname }}</span
-        >
-        <span *ngIf="!house.user">nessuno</span>
-      </li>
-    </ul>
-  </div>
-
+  <app-card-house-user [userHouse]="house" />
   }
 </div>
