--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -10,3 +10,10 @@ footer {
 svg {
   padding-top: 2px;
 }
+
+/*media query mobile version*/
+@media only screen and (max-width: 767px) {
+  footer {
+    margin-left: 0px;
+  }
+}
