--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     src="https://www.infobuildenergia.it/wp-content/uploads/2022/06/condizionatori-in-condominio-regole.jpg"
     alt="img.header"
   />
-  <div class="title-header">
+  <div class="title-header" routerLink="/login">
     <img id="logo" class="mt-1" src="/assets/logo2.png" alt="alt_logo" />
     <h1>EasyHome</h1>
     <h4>{{ title }}</h4>
