--- a/src/app/components/sidebar-homepage/sidebar-homepage.component.css
+++ b/src/app/components/sidebar-homepage/sidebar-homepage.component.css
@@ -4,6 +4,9 @@
   height: 100vh;
   position: fixed;
 }
+#logo {
+  cursor: pointer;
+}
 #profile {
   background-color: var(--white-EasyHome);
 }
@@ -21,36 +24,46 @@ button {
 /*media query mobile version*/
 @media only screen and (max-width: 767px) {
   #sidebar {
+    position: fixed;
     width: 100vw;
-    height: 20%;
+    height: 15%;
     z-index: 160;
     display: flex;
     flex-direction: row-reverse;
   }
   #profile {
     width: 100%;
-    height: 35%;
+    height: 45%;
     display: flex;
     flex-direction: row-reverse;
     position: absolute;
+    top: 20px;
+  }
+  #profile p {
+    padding-top: 0px !important;
   }
   #imgProfile {
-    width: 65px;
-    height: 65px;
+    width: 50px;
+    height: 50px;
+  }
+  #logo {
+    position: relative;
+    left: -40%;
+    top: -7px;
   }
   #menu {
     display: flex;
     justify-content: space-around;
     align-items: end;
+    transform: translateX(-16%);
   }
   button {
     width: auto;
     height: 30%;
-    padding: 0px;
+    padding: 5px !important;
     background-color: var(--blue-EasyHome);
     border: none;
     margin-left: 15px;
-    padding: 5px;
   }
 }
 
