--- a/src/app/components/table-notification/table-notification.component.css
+++ b/src/app/components/table-notification/table-notification.component.css
@@ -27,6 +27,7 @@ thead tr th {
 /*media query mobile version*/
 @media only screen and (max-width: 767px) {
   table {
-    margin-left: 5%;
+    width: 95vw;
+    margin-left: 2.5vw;
   }
 }
