--- a/src/app/components/sidebar-homepage/sidebar-homepage.component.html
+++ b/src/app/components/sidebar-homepage/sidebar-homepage.component.html
@@ -27,6 +27,9 @@
       Le mie case
     </button>
     <button class="btn btn-primary mb-2">Impostazioni</button>
+    <button routerLink="/backoffice/" class="btn btn-primary mb-2">
+      Visualizza Case
+    </button>
     }
     <!--Bottoni Amministratore-->
     @else {
