--- a/src/app/sections-backoffice/section-bacheca-admin/section-bacheca-admin.component.css
+++ b/src/app/sections-backoffice/section-bacheca-admin/section-bacheca-admin.component.css
@@ -1,3 +1,25 @@
 h2 {
-  margin-left: 50%;
+  margin-left: 49%;
+  font-weight: 700;
+  color: var(--white-EasyHome);
+}
+
+form {
+  margin-left: 20%;
+  width: 74vw;
+  padding: 15px;
+  background-color: var(--blue-EasyHome);
+  color: var(--white-EasyHome);
+  border-radius: 10px;
+}
+select {
+  width: 72vw;
+}
+form div input:first-of-type {
+  width: 72vw;
+  height: 40vh;
+}
+
+button {
+  margin-left: 95%;
 }
